welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: reassignment to val
  if (negative=false){
              ^posNeg:7: error: reassignment to val
      a=true
       ^posNeg:9: error: reassignment to val
      a=false
       ^posNeg:12: error: reassignment to val
    a=true
     ^posNeg:14: error: reassignment to val
    a=true
     ^posNeg:16: error: reassignment to val
    a=false
     ^posNeg:18: error: type mismatch;
 found   : Int
 required: Boolean
  return a
         ^